--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -56,6 +56,18 @@ header{
     color: white;
 }
 
+#order-button{
+    font-size: 16px;
+    background-color: red;
+    padding: 5px;
+    margin-left: 10px;
+}
+
+#order-button:hover{
+    cursor: pointer;
+    background-color: #fa4234;
+}
+
 nav{
     font-size: 24px;
     font-style: normal;
