--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -5,7 +5,7 @@ body{
 header{
     font-size: 48px;
     color: white;
-    background-color: #f5cc53;
+    background-color: #f28e1c;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -242,7 +242,7 @@ body {
 .h-bg .h-bg-inner {
   width: 50%;
   height: 100%;
-  background-color: #f5cc53;
+  background-color: #f28e1c;
 }
 
 .info-inner {
@@ -369,4 +369,24 @@ body {
   letter-spacing: 0.045em;
   text-transform: uppercase;
   white-space: nowrap;
+}
+
+#order-thank-you{
+    display: none;
+    background-color: #f28e1c;
+    color: white;
+    width: 50%;
+    margin: auto;
+    margin-top: 100px;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+#top-text{
+    margin-bottom: 20px;
+}
+
+#bottom-text{
+    margin-bottom: 40px;
 }
