--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -5,7 +5,7 @@ body{
 header{
     font-size: 48px;
     color: white;
-    background-color: #f5cc53;
+    background-color: #f28e1c;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -202,7 +202,7 @@ body {
 .h-bg .h-bg-inner {
   width: 50%;
   height: 100%;
-  background-color: #f5cc53;
+  background-color: #f28e1c;
 }
 
 .info-inner {
